bundestag.io/admin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: democracy/bundestag.io-admin:3.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4003
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '4'
              memory: 4Gi
            requests:
              cpu: 10m
              memory: 90Mi
