bundestag.io/admin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin
  name: admin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4003
  selector:
    app: admin
