bundestag.io/admin/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  labels:
    app: admin
spec:
  ingressClassName: nginx
  rules:
    - host: admin.${var.hostname}
      http:
        paths:
          - backend:
              service:
                name: admin
                port:
                  number: 80
            path: /
            pathType: Prefix
